--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
   --hero-footer-background: #2f303a;
   --footer-text-color: rgba(255, 255, 255, 0.6);
   --accent-color: #2196f3;
+  --background-icons: #f5f4fa;
 }
 /* Устанавливаем финальные размеры для всех  */
 *,
@@ -28,7 +29,6 @@ body {
   font-size: 14px;
   background-color: var(--primary-background);
   color: var(--secondary-text-color);
-  
 }
 /* Правильное отображение картинок */
 img {
@@ -68,354 +68,541 @@ button {
 address {
   font-style: normal;
 }
-.container{
-width: 1200px;
-padding: 0 15px;
-margin: 0 auto;
-/* outline: 2px solid tomato; */
-
+.container {
+  width: 1200px;
+  padding: 0 15px;
+  margin: 0 auto;
+  /* outline: 2px solid tomato; */
 }
 
 /* ----------HEADER---------- */
-.header{
+.header {
   display: flex;
   align-items: center;
 }
 
-.header-nav{
-display: flex;
-align-items: center;
+.header-nav {
+  display: flex;
+  align-items: center;
 }
-.site-nav{
-display: flex;
-margin-left: 93px;
-padding: 32px 0;
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+  padding: 32px 0;
 }
 
-.site-nav-item:not(:last-child){
+.site-nav-item:not(:last-child) {
   margin-right: 50px;
 }
 
-
 .logo-second {
-  color:var(--accent-color);
+  color: var(--accent-color);
 }
-.page-header{
+.page-header {
   border-bottom: 1px solid #ececec;
 }
-.logo{
-  font-family: "Raleway"; sans-serif;
+.logo {
+  font-family: "Raleway" sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  color:#000000;
+  color: #000000;
 }
-.site-nav .link
- {
-color: var(--primary-text-color);
-font-weight: 500;
-line-height: 1.14;
-letter-spacing: 0.02em;
+.site-nav .link {
+  color: var(--primary-text-color);
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
-.site-nav .link.current{
-  color:var(--accent-color);
+.site-nav .link.current {
+  color: var(--accent-color);
 }
 
-.auth-nav .link{
-color: var(--secondary-text-color);
-font-weight: 500;
-line-height: 1.14;
-letter-spacing: 0.02em;
+.auth-nav .link {
+  color: var(--secondary-text-color);
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  display: flex;
+  align-items: center;
 }
 
 .site-nav .link:hover,
 .site-nav .link:focus,
 .auth-nav .link:hover,
 .auth-nav .link:focus {
-  color:var(--accent-color);
+  color: var(--accent-color);
 }
 
-.auth-nav{display: flex;
+.auth-nav {
+  display: flex;
   margin-left: auto;
+  align-items: center;
 }
 
-.auth-nav-item:not(:last-child){
+.auth-nav-item:not(:last-child) {
   margin-right: 50px;
+}
+.link-icon {
+  margin-right: 10px;
+  fill: var(--secondary-text-color);
+}
+
+.link:focus .link-icon,
+.link:hover .link-icon {
+  fill: var(--accent-color);
 }
 
 /* ----------HERO---------- */
-.hero{
-background-color:var(--hero-footer-background);
-text-align: center;
+.hero {
+  max-width: 1600px;
+  max-height: 600px;
+  margin-right: auto;
+  margin-left: auto;
 
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../images/hero-background.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
+  background-color: var(--hero-footer-background);
+  text-align: center;
 }
-.hero .container{
+.hero .container {
   padding: 200px 0;
   text-align: center;
 }
 
 .hero-title {
-max-width: 695px;
-margin: 0 auto;
-margin-bottom: 30px;
+  max-width: 695px;
+  margin: 0 auto;
+  margin-bottom: 30px;
 
-color: var(--primary-background);
-font-weight: 900;
-font-size: 44px;
-line-height: 1.36;
-text-align: center;
-letter-spacing: 0.06em;
-text-transform: uppercase;
+  color: var(--primary-background);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
 
 .hero-btn {
-display: block;
-min-width: 200px;
-padding: 10px 32px;
-margin: auto;
-background-color: var(--accent-color);
-color:var(--primary-background);
-font-weight: 700;
-font-size: 16px;
-line-height: 1.87;
-display: flex;
-align-items: center;
-text-align: center;
-letter-spacing: 0.06em;
-cursor: pointer;
-border-width: 0px;
+  display: block;
+  min-width: 200px;
+  padding: 10px 32px;
+  margin: auto;
+  background-color: var(--accent-color);
+  color: var(--primary-background);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  border-width: 0px;
 }
 
 .hero-btn:hover,
-.hero-btn:focus{
-  background-color:#188CE8;
+.hero-btn:focus {
+  background-color: #188ce8;
 }
 
 /* ----------Benefit---------- */
-.benefit-list{
+.benefit-list {
   display: flex;
+  gap: 30px;
 }
-.benefit-list:not(:last-child){
+/* .benefit-list:not(:last-child){
   margin-right: 30px;
-  max-width: 270px;
-}
+  max-width: 270px; */
 
-
-.benefit{
-padding-top: 94px;
-padding-bottom: 94px;
-}
-
-.benefit-title{
-padding-bottom: 10px;
-
-color:var(--primary-text-color);
-font-weight: 700;
-
-line-height: 1.14;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-}
-.benefit-text{
-color:var(--secondary-text-color);
-font-weight: 400;
-line-height: 1.71;
-letter-spacing: 0.03em;
-}
-
-/* ----------Work-section---------- */
-.work-title{
-margin-bottom: 50px;
-text-align: center;
-color: var(--primary-text-color);
-font-weight: 700;
-font-size: 36px;
-line-height: 1.16;
-letter-spacing: 0.03em;
-}
-.work-list{
+.benefits-bg-color {
+  width: 270px;
+  height: 120px;
+  background-color: var(--background-icons);
   display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+  border-radius: 4px;
 }
-.work-item:not(:last-child){
-  margin-right: 30px;
+
+.benefits-icon {
+  width: 70px;
+  height: 70px;
 }
-.work-section{
+.benefit-item {
+  width: 270px;
+  height: 248px;
+}
+
+.benefit {
+  padding-top: 94px;
   padding-bottom: 94px;
 }
 
+.benefit-title {
+  padding-bottom: 10px;
+
+  color: var(--primary-text-color);
+  font-weight: 700;
+
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.benefit-text {
+  color: var(--secondary-text-color);
+  font-weight: 400;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+/* ----------Work-section---------- */
+.work-title {
+  margin-bottom: 50px;
+  text-align: center;
+  color: var(--primary-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+}
+.work-list {
+  display: flex;
+}
+.work-item:not(:last-child) {
+  margin-right: 30px;
+}
+.work-section {
+  padding-bottom: 94px;
+}
 
 /* ----------Team-section---------- */
-.team-section{
+.team-section {
   padding-top: 94px;
   padding-bottom: 94px;
   background-color: var(--sedondary-background);
 }
-.team-title{
-margin-bottom: 50px;
-text-align: center;
+.team-title {
+  margin-bottom: 50px;
+  text-align: center;
 
-color: var(--primary-text-color);
-font-size: 36px;
-line-height: 1.16;
-letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+  font-size: 36px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
 }
 
-.team-list{
+.team-list {
   display: flex;
 }
 
-
-.team-member{
-color: var(--primary-text-color);
-font-size: 16px;
-line-height: 1.18;
-letter-spacing: 0.03em;
+.team-member {
+  color: var(--primary-text-color);
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
 }
-.position{
-margin-top: 10px;
-font-size: 16px;
-line-height: 1.18;
-letter-spacing: 0.03em;
-text-align: center;
+.position {
+  margin-top: 10px;
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+  text-align: center;
 }
 
-.team-card{
+.team-card {
   background-color: var(--primary-background);
   width: 270px;
   text-align: center;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
-.team-card:not(:last-child){
+.team-card:not(:last-child) {
   margin-right: 30px;
 }
-.team-position{
-  padding: 30px 0;
+.team-position {
+  margin-top: 30px;
+}
+
+.team-social {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+  padding-bottom: 30px;
+  gap: 10px;
+}
+
+.team-social-link {
+  display: flex;
+  width: 44px;
+  height: 44px;
+
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+.team-social-item {
+  width: 20px;
+  height: 20px;
+  /* fill: currentColor; */
+  /* fill: green; */
+  fill: #afb1b8;
+}
+
+.team-social-link {
+}
+.team-social-link:hover,
+.team-social-link:focus {
+  background-color: var(--accent-color);
+}
+
+.team-social-link:hover .team-social-item,
+.team-social-link:focus .team-social-item {
+  fill: #ffffff;
+}
+
+/* ----------Clients---------- */
+.clients {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.clients-title {
+  margin-bottom: 50px;
+
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+
+.clients-list {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  gap: 30px;
+}
+
+.clients-item {
+}
+.client-logo-link {
+  display: flex;
+  width: 170px;
+  height: 92px;
+  justify-content: center;
+  align-items: center;
+  fill: #afb1b8;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+}
+.client-logo-link:hover,
+.client-logo-link:focus {
+  /* fill: var(--accent-color); */
+  border: 1px solid var(--accent-color);
 }
 
 /* ----------Footer---------- */
-.footer{
-padding: 60px 0;
-background-color: var(--hero-footer-background);
+.footer {
+  padding: 60px 0;
+  background-color: var(--hero-footer-background);
 }
-.logo-black{
-  font-family: "Raleway"; sans-serif;
+.logo-black {
+  font-family: "Raleway" sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  color:var(--primary-background);
+  color: var(--primary-background);
 }
-.footer-address{
-color: var(--primary-background);
-font-weight: 400;
-line-height: 1.71;
-font-style: normal;
-letter-spacing: 0.03em;
+.footer-address {
+  color: var(--primary-background);
+  font-weight: 400;
+  line-height: 1.71;
+  font-style: normal;
+  letter-spacing: 0.03em;
 }
-.footer-contact{
+.footer-contact {
   color: var(--footer-text-color);
-font-weight: 400;
-line-height: 1.71;
-font-style: normal;
-letter-spacing: 0.03em;
+  font-weight: 400;
+  line-height: 1.71;
+  font-style: normal;
+  letter-spacing: 0.03em;
 }
 .footer-contact:hover,
-.footer-contact:focus{
-color:var(--accent-color);
+.footer-contact:focus {
+  color: var(--accent-color);
 }
 
-.footer-contact{
+.footer-contact {
   margin-top: 20px;
 }
-.footer-item:not(:first-child){
+.footer-item:not(:first-child) {
   margin-top: 9px;
 }
 
-/*Скрытие заголовка которого нет на макете  */
-.title-visually-hidden{
-position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
-  }
-
-  /* ----------PORTFOLIO.html---------- */
-.portfolio-section{
-padding-top: 94px;
-padding-bottom: 94px;
+.title-social {
+  margin-bottom: 20px;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-background);
+}
+.footer-soc-list {
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
 
-.portfolio-list{
+.footer-box {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.footer-social {
+  margin-left: 70px;
+}
+
+.footer-icon {
+  fill: var(--primary-background);
+}
+
+.footer-soc-link:hover,
+.footer-soc-link:focus {
+  background-color: var(--accent-color);
+}
+
+.footer-soc-link {
+  width: 44px;
+  height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+/*Скрытие заголовка которого нет на макете  */
+.title-visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
+/* ----------PORTFOLIO.html---------- */
+.portfolio-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.portfolio-list {
   display: flex;
   margin-bottom: 50px;
   justify-content: center;
 }
-.button-item:not(:last-child){
+.button-item:not(:last-child) {
   margin-right: 8px;
 }
 
-.portfolio-btn{
-display: inline-flex;
-min-width: 73px;
-padding: 6px 22px;
+.button-item:hover,
+.button-item:focus {
+  /* box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  background: #ffffff;
+  border: 1px solid #eeeeee; */
+}
 
-color: #212121;
-background-color: var(--sedondary-background);
-font-weight: 500;
-font-size: 16px;
-line-height: 1.62;
-text-align: center;
-letter-spacing: 0.03em;
-cursor: pointer;
-border-radius: 4px;
-border-width: 0px;
+.portfolio-btn {
+  display: inline-flex;
+  min-width: 73px;
+  padding: 6px 22px;
+
+  color: #212121;
+  background-color: var(--sedondary-background);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  border-radius: 4px;
+  border-width: 0px;
 }
 
 .portfolio-btn:hover,
-.portfolio-btn:focus{
+.portfolio-btn:focus {
   background-color: var(--accent-color);
   color: var(--primary-background);
-}
-.portfolio-title{
-color: var(--primary-text-color);
-font-weight: 700;
-font-size: 18px;
-line-height: 2;
-letter-spacing: 0.06em;
-}
-.portfilio-text{
-color: var(--secondary-text-color);
-font-weight: 400;
-font-size: 16px;
-line-height: 1.87;
-letter-spacing: 0.03em;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-
-.portfolio{
-display: flex;
-flex-wrap: wrap;
-justify-content: space-around;
-margin: -15px;
+.portfolio-title {
+  color: var(--primary-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+.portfilio-text {
+  color: var(--secondary-text-color);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
 }
 
-.portfolio-item{
-width: 370px;
-margin: 15px;
+.portfolio {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: -15px;
 }
 
+.portfolio-item {
+  width: 370px;
+  margin: 15px;
+}
 
-.portfolio-card{
-  border-left: 1px solid #ECECEC;
-  border-right: 1px solid #ECECEC;
-  border-bottom: 1px solid #ECECEC;
-  background-color:var(--primary-background);
+.portfolio-card {
+  border-left: 1px solid #ececec;
+  border-right: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
+  background-color: var(--primary-background);
   width: 370px;
   padding: 20px 24px;
+}
+
+.link-portfolio {
+  cursor: pointer;
+}
+
+.portfolio-item:hover,
+.lportfolio-item:focus {
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
